# open-corpus-registry

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pages.yaml  uv-ci.yaml
data/: datasets_all.jsonl  list_datasets.json
src/: expand_dataset_info.py  extract_readme_data.py  standardize_data.py  update_datasets_pipeline.py
src/prompts/: system_prompt.txt
templates/: index.html
